Fix .video-title word-wrap.

--- a/app/assets/stylesheets/illustrator.scss
+++ b/app/assets/stylesheets/illustrator.scss
@@ -567,6 +567,7 @@ footer {
           color : #000000;
           color : rgb(0, 0, 0);
           text-transform : uppercase;
+          word-wrap:break-word;
         }
 
         .video-year {
